[package]
name = "event-listener"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v2.x.y" git tag
version = "2.5.3"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.40"
description = "Notify async tasks or threads"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/event-listener"
keywords = ["condvar", "eventcount", "wake", "blocking", "park"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[features]
default = ["std"]
std = ["parking"]
portable-atomic = ["portable-atomic-util", "portable_atomic_crate"]

[dependencies]
parking = { version = "2.0.0", optional = true }
pin-project-lite = "0.2.12"
portable-atomic-util = { version = "0.1.2", default-features = false, optional = true, features = ["alloc"] }

[dependencies.portable_atomic_crate]
package = "portable-atomic"
version = "1.2.0"
default-features = false
optional = true

[dev-dependencies]
futures-lite = "1.12.0"
waker-fn = "1"

[dev-dependencies.criterion]
version = "0.4.0"
default-features = false
features = ["cargo_bench_support"]

[[bench]]
name = "bench"
harness = false

[lib]
bench = false

[workspace]
members = ["strategy"]
